--- a/TetrisTests/TetrisTests.csproj
+++ b/TetrisTests/TetrisTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeITest.cs" />
     <Compile Include="ShapeOTest.cs" />
+    <Compile Include="ShapeSTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\tetris\Tetris.csproj">
