Testing Shape T - Partial

--- a/TetrisTests/TetrisTests.csproj
+++ b/TetrisTests/TetrisTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BoardTest.cs" />
     <Compile Include="ShapeITest.cs" />
     <Compile Include="ShapeOTest.cs" />
+    <Compile Include="ShapeTTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\tetris\Tetris.csproj">
