Starting Shape Proxy

--- a/TetrisTests/TetrisTests.csproj
+++ b/TetrisTests/TetrisTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ShapeOTest.cs" />
     <Compile Include="ShapeTTest.cs" />
     <Compile Include="ShapeZTest.cs" />
+    <Compile Include="ShapeProxyTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\tetris\Tetris.csproj">
