Actually fixed the using problem, added it to references. Partial boardSprite.

--- a/Game1/TetrisGame.csproj
+++ b/Game1/TetrisGame.csproj
@@ -64,6 +64,12 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tetris\Tetris.csproj">
+      <Project>{6f0f73a8-e994-45e6-83bc-1725f9ce845f}</Project>
+      <Name>Tetris</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
