Added all the missing code, time to debug

--- a/Game1/TetrisGame.csproj
+++ b/Game1/TetrisGame.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Content\scoreFont.spritefont" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\tetris\Tetris.csproj">
